--- a/WabiSabiTeamProject/Feature/AddRoutine/View/ButtonRoutinePageTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/AddRoutine/View/ButtonRoutinePageTableViewCell.xib
@@ -26,7 +26,7 @@
                         </constraints>
                         <color key="tintColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Add Other Product">
+                        <buttonConfiguration key="configuration" style="plain" title="Add Other Product" cornerStyle="capsule">
                             <fontDescription key="titleFontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="17"/>
                         </buttonConfiguration>
                         <connections>
@@ -34,13 +34,13 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LcH-9U-QYc">
-                        <rect key="frame" x="20" y="60" width="280" height="45"/>
+                        <rect key="frame" x="20" y="60" width="280" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="45" id="Br5-2z-HGj"/>
+                            <constraint firstAttribute="height" constant="40" id="Br5-2z-HGj"/>
                         </constraints>
                         <color key="tintColor" name="ColorPrimary"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Import from existing routine">
+                        <buttonConfiguration key="configuration" style="plain" title="Import from existing routine" cornerStyle="capsule">
                             <fontDescription key="titleFontDescription" name="SFProRounded-Bold" family="SF Pro Rounded" pointSize="17"/>
                         </buttonConfiguration>
                         <connections>
